styles/style.css
* {
    background-color:#0A845D;
    box-sizing: border-box;
    font-family:sans-serif;
    margin: 0px;
    padding: 0px;
}

/* buttons */
.button {
    background-color: white;
    border: none;
    border-radius: 10px;
    font-weight: bold;
}

.button:hover {
    filter: brightness(90%);
}

.button--large {
    width: 300px;
    height: 50px;
    font-size: 32px;
    text-shadow: 2px 2px #C0C0C0;
}

.button--small {
    width: 200px;
    height: 32px;
    font-size: 18px;
    text-shadow: 1px 1px #C0C0C0;
}

/* wordmark */
.wordmark {

}

.wordmark--large {
    width: 610px;
}

.wordmark--small {
    width: 144px;
}

/* non-home banner */
.non-home-banner {
    display: flex;
    align-items: center;

    padding: 0px clamp(34px, 2%, 233px);
}

.non-home-banner__profile-icon {
    width: 34px;
    height: 34px;
    margin-left: auto;
}

/* card styling */
.card {
    display: flex;
    flex-direction: column;
    justify-content: space-between;

    width: 89px;
    height: 144px;

    padding: 8px;

    background-color: #FAF9F6;
    border-radius: 8px;
}

.card__top-section {
    display: flex;
    flex-direction: column;

    background-color: inherit;
}

.card__bottom-section {
    display: flex;
    flex-direction: column;

    margin-left: auto;

    background-color: inherit;
    transform: rotate(180deg);
}

.card__number {
    background-color: inherit;
    font-size: 21px;
}

.card__suit {
    background-color: inherit;
    font-size: 21px;
}

.card--hearts {
    color: red;
}

.card--diamonds {
    color:#B46F01;
}

.card--spades {
    color: black;
}

.card--clubs {
    color: #0A73C7;
}

.card--hidden {
    color: black;
    background-color: black;
}

